@@ -1,3 +1,14 @@
+2010-05-07  Pavel Feldman  <pfeldman@chromium.org>
+
+        Reviewed by Timothy Hatcher.
+
+        Web Inspector: come up with InjectedScript._className that works for both JSC and V8.
+
+        https://bugs.webkit.org/show_bug.cgi?id=38755
+
+        * inspector/front-end/InjectedScript.js:
+        (injectedScriptConstructor):
+
 2010-05-07  Joseph Pecoraro  <joepeck@webkit.org>
 
         Reviewed by Adam Barth.
